--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -13,6 +13,12 @@
 			height: 100%;
 			overflow: hidden;
 
+			picture {
+				display: block;
+				width: 100%;
+				height: 100%;
+			}
+
 			img {
 				width: 100%;
 				height: 100%;
@@ -42,7 +48,6 @@
 			padding-left: clamp(1rem, -1.75rem + 11vw, 3.75rem);
 
 			h1 {
-				font-size: 2rem;
 				font-size: 1rem;
 				font-size: clamp(
 					1rem,
